test/analyze/type_check/call/basic.exp
Error: Expected type `Int` but found `Unit`
test/analyze/type_check/call/basic.myte:14:9-11
 14 |   intArg(());
    |          ^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/call/basic.myte:15:12-14
 15 |   threeArgs((), true, "a");
    |             ^^

Error: Expected type `Bool` but found `Unit`
test/analyze/type_check/call/basic.myte:16:15-17
 16 |   threeArgs(1, (), "a");
    |                ^^

Error: Expected type `String` but found `Unit`
test/analyze/type_check/call/basic.myte:17:21-23
 17 |   threeArgs(1, true, ());
    |                      ^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/call/basic.myte:18:12-15
 18 |   threeArgs("b", true, 2);
    |             ^^^

Error: Expected type `String` but found `Int`
test/analyze/type_check/call/basic.myte:18:23
 18 |   threeArgs("b", true, 2);
    |                        ^

Error: Expected type `Int` but found `String`
test/analyze/type_check/call/basic.myte:19:12-15
 19 |   threeArgs("b", (), 2);
    |             ^^^

Error: Expected type `Bool` but found `Unit`
test/analyze/type_check/call/basic.myte:19:17-19
 19 |   threeArgs("b", (), 2);
    |                  ^^

Error: Expected type `String` but found `Int`
test/analyze/type_check/call/basic.myte:19:21
 19 |   threeArgs("b", (), 2);
    |                      ^

Error: Expected type `(Int, Bool, (String, Unit))` but found `(Int, Bool, (Unit, String))`
test/analyze/type_check/call/basic.myte:20:11-33
 20 |   tupleArg((1, true, ((), "str")));
    |            ^^^^^^^^^^^^^^^^^^^^^^

Error: Expected type `Unit` but found `Bool`
test/analyze/type_check/call/basic.myte:23:3-13
 23 |   (intArg(()): Unit);
    |    ^^^^^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/call/basic.myte:23:10-12
 23 |   (intArg(()): Unit);
    |           ^^