test/analyze/type_check/call/basic.myte
module Test

fun intArg(x: Int): Bool = true
fun threeArgs(x: Int, y: Bool, z: String): Unit = ()
fun tupleArg(x: (Int, Bool, (String, Unit))): Unit = ()

fun main() {
  // No errors and return type is correctly inferred
  (intArg(1): Bool);
  (threeArgs(1, true, "a"): Unit);
  (tupleArg((1, true, ("str", ()))): Unit);

  // Error on incorrect arguments
  intArg(());
  threeArgs((), true, "a");
  threeArgs(1, (), "a");
  threeArgs(1, true, ());
  threeArgs("b", true, 2);
  threeArgs("b", (), 2);
  tupleArg((1, true, ((), "str")));

  // Arguments have type error but return value is still inferred
  (intArg(()): Unit);
}